--- a/LOHAS/pages/announcement/announcement.wxss
+++ b/LOHAS/pages/announcement/announcement.wxss
@@ -41,3 +41,35 @@ page{
   width: 100%;
   height: 150rpx;
 }
+
+
+.announcement-card {
+  margin: 0;
+  background-color: white;
+}
+
+.van-swipe-cell__left{
+  display: inline-block;
+  width: 65px;
+  font-size: 15px;
+  color: #fff;
+  text-align: center;
+  background-color: rgb(29, 243, 47);
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+  -webkit-box-align: center;
+}
+
+.van-swipe-cell__right {
+  display: inline-block;
+  width: 65px;
+  font-size: 15px;
+  color: #fff;
+  text-align: center;
+  background-color: #f44;
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+  -webkit-box-align: center;
+}
