--- a/LOHAS/pages/login/login.wxml
+++ b/LOHAS/pages/login/login.wxml
@@ -5,7 +5,7 @@
     <label>用户名</label>
     <input placeholder="请输入用户名" bindinput="getUserName"/>
     <label>密码</label>
-    <input placeholder="请输入密码" bindinput="getPassword"/>
+    <input placeholder="请输入密码" type="password" bindinput="getPassword"/>
     <button class="login-btn" bindtap="login">立即登录</button>
   </view>
 </view>
