--- a/LOHAS/pages/product/ddl_product/update_ddl_product.wxml
+++ b/LOHAS/pages/product/ddl_product/update_ddl_product.wxml
@@ -1,15 +1,3 @@
-
-<!-- Model
-{
-  "current_cost": 0,
-  "expiry_date": "2021-04-09T11:23:56.346Z",
-  "origin_cost": 0,
-  "product_intro": "string",
-  "product_name": "string",
-  "product_pic": "string",
-  "production_date": "2021-04-09T11:23:56.346Z"
-} -->
-
 <view >
   <van-cell-group>
   <van-field
@@ -17,7 +5,7 @@
     label="商品名称"
     placeholder="请输入商品名称"
     border="{{ false }}"
-    bind:change="onChangeGoodsName"
+    bind:change="onChangeProductName"
   />
   </van-cell-group>
   <van-cell-group>
@@ -27,7 +15,7 @@
     type="number"
     placeholder="请输入当前商品价格"
     border="{{ false }}"
-    bind:change="onChangeGoodsCurrentPrice"
+    bind:change="onChangeProductCurrentPrice"
   />
   </van-cell-group>
   <van-cell-group>
@@ -36,7 +24,7 @@
     label="商品原价"
     placeholder="请输入原商品价格"
     border="{{ false }}"
-    bind:change="onChangeGoodsOriginalPrice"
+    bind:change="onChangeProductOriginalPrice"
   />
   </van-cell-group>
   <van-cell-group>
@@ -47,7 +35,7 @@
     placeholder="请输入商品简介"
     autosize
     border="{{ false }}"
-    bind:change="onChangeGoodsBriefIntroduction"
+    bind:change="onChangeProductBriefIntroduction"
   />
   </van-cell-group>
   <view>
@@ -74,5 +62,5 @@
 />
 
 <view class="bottom_btn">
-    <button class="submit_button" bindtap="createGoods">{{submit_btn_text}}</button>
+    <button class="submit_button" bindtap="createGoods">修改</button>
 </view>
