待完成：商家信息修改，盲盒管理

--- a/LOHAS/pages/announcement/announcement.wxml
+++ b/LOHAS/pages/announcement/announcement.wxml
@@ -45,6 +45,7 @@
                 删除
                 </view>
                 </van-swipe-cell>
+                <view class="apart"></view>
              </navigator>
             </view>
           </scroll-view>
