--- a/LOHAS/pages/product/ddl_product/ddl_product.wxml
+++ b/LOHAS/pages/product/ddl_product/ddl_product.wxml
@@ -52,6 +52,7 @@
                 </view>
                 </van-swipe-cell>
              </navigator>
+             <view class="apart"></view>
             </view>
           </scroll-view>
         </view>
