--- a/LOHAS/pages/store/store.wxss
+++ b/LOHAS/pages/store/store.wxss
@@ -1,15 +1,25 @@
 /* pages/store/store.wxss */
 .container {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
+  padding: 50rpx 0 100rpx 0;
 } 
 
-.store_map{
-  display: flex;
-  margin-bottom:10px;
+.map{
+  width: 100%;
+  height: 50vh;
+}
+
+.top_nav_c {
+  width: 30px;
+  height: 30px;
+  bottom:100rpx;
+}
+
+.upperView {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  height:100%;
 }
