修改、发布整合到同一页面，等api，待完善

--- a/LOHAS/pages/product/forsale_product/update.wxml
+++ b/LOHAS/pages/product/forsale_product/update.wxml
@@ -59,5 +59,5 @@
 </view>
 
 <view class="bottom_btn">
-    <button class="submit_button" bindtap="updateForsaleProduct">{{submit_btn_text}}</button>
+    <button class="submit_button" bindtap="onBottomButtonClick">{{bottom_btn_text}}</button>
 </view>
