--- a/LOHAS/pages/announcement/update.wxml
+++ b/LOHAS/pages/announcement/update.wxml
@@ -1,4 +1,3 @@
-<!--pages/announcement/releaseAnnouncement.wxml-->
 <view>
   <van-cell-group>
     <van-field
@@ -20,5 +19,5 @@
   </van-cell-group>
 </view>
 <view class="bottom_btn">
-    <button class="submit_button" bindtap="releaseAnnouncement">发布</button>
+    <button class="submit_button" bindtap="updateAnnouncement">发布修改</button>
 </view>
