四大模块完成，待完成：我的订单

--- a/LOHAS/pages/product/ddl_product/update.wxml
+++ b/LOHAS/pages/product/ddl_product/update.wxml
@@ -6,6 +6,7 @@
     placeholder="请输入商品名称"
     border="{{ false }}"
     bind:change="onChangeProductName"
+    value="{{QueryParams.product_name}}"
   />
   </van-cell-group>
   <van-cell-group>
@@ -16,6 +17,7 @@
     placeholder="请输入当前商品价格"
     border="{{ false }}"
     bind:change="onChangeProductCurrentPrice"
+    value="{{QueryParams.current_cost}}"
   />
   </van-cell-group>
   <van-cell-group>
@@ -25,6 +27,7 @@
     placeholder="请输入原商品价格"
     border="{{ false }}"
     bind:change="onChangeProductOriginalPrice"
+    value="{{QueryParams.origin_cost}}"
   />
   </van-cell-group>
   <van-cell-group>
@@ -36,6 +39,7 @@
     autosize
     border="{{ false }}"
     bind:change="onChangeProductBriefIntroduction"
+    value="{{QueryParams.product_intro}}"
   />
   </van-cell-group>
   <view>
@@ -43,6 +47,7 @@
     file-list="{{ fileList }}"
     max-count="1"
     bind:after-read="afterRead"
+    bind:delete="onDeleteClick"
     accept="image"
     />
   </view>
@@ -62,5 +67,5 @@
 />
 
 <view class="bottom_btn">
-    <button class="submit_button" bindtap="createGoods">修改</button>
+    <button class="submit_button" bindtap="onBottomButtonClick">修改</button>
 </view>
