--- a/LOHAS/pages/announcement/update.wxml
+++ b/LOHAS/pages/announcement/update.wxml
@@ -6,6 +6,7 @@
     placeholder="请输入公告标题"
     border="{{ false }}"
     bind:input="getTitle"
+    value="{{QueryParams.title}}"
     />
     <van-field
     value="{{ message }}"
@@ -15,9 +16,10 @@
     autosize
     border="{{ false }}"
     bind:input="getContent"
+    value="{{QueryParams.content}}"
     />
   </van-cell-group>
 </view>
 <view class="bottom_btn">
-    <button class="submit_button" bindtap="updateAnnouncement">发布修改</button>
+    <button class="submit_button" bindtap="onBottomButtonClick">发布修改</button>
 </view>
