--- a/LOHAS/pages/store/store.wxml
+++ b/LOHAS/pages/store/store.wxml
@@ -10,7 +10,7 @@
   </map>
   
 </view>
-
+<van-divider contentPosition="center">我的店铺</van-divider>
 <view>
   <van-grid clickable column-num="2">
   <van-grid-item
