--- a/LOHAS/pages/user/user.wxml
+++ b/LOHAS/pages/user/user.wxml
@@ -1,19 +1,21 @@
 <!--pages/first/first.wxml-->
-<view style="width: 750rpx; height: 1279rpx; display: block; box-sizing: border-box" >
-    <view class="flex-container">
-      <button wx:if="{{!userinfo.avatar}}" class="userUnLogin" bindtap="jumpPage">未登录</button>
-        <view class="UserHeadImage" wx:if="{{userinfo.avatar}}"  >
-            <image src='{{userinfo.avatar}}' bindtap="imageClick"/>
+<view style="width: 750rpx; height: 1279rpx; display: block; box-sizing: border-box">
+    <view class="user_info_wrap">
+        <view wx:if="{{userinfo.shop_name}}" class="user_img_wrap">
+            <image class="user_bg" src="{{userinfo.head_picture}}" bindtap="backgroundClick"></image>
+            <view class="user_info">
+                <image class="user_icon" src="{{userinfo.avatar}}" bindtap="imageClick"></image>
+                <view class="user_name">{{userinfo.shop_name}}</view>
+            </view>
         </view>
-        <view class="UserName"  wx:if="{{userinfo.shop_name}}" >
-            <view class='user-name' >{{userinfo.shop_name}}</view>
-            <!-- <view class="PersonalitySignature">用户可自定义个性签名(限制字数）</view> -->
+        <view wx:else class="user_btn">
+            <button class="userUnLogin" bindtap="jumpPage">未登录</button>
         </view>
     </view>
 
     <view class="Mine" wx:if="{{userinfo.avatar}}">
         <navigator class="Trans" url="./update">
-            <view >修改信息</view>
+            <view>修改信息</view>
         </navigator>
         <navigator class="Trans" url="./order">
             <view>我的</view>
@@ -29,4 +31,3 @@
         </navigator>
     </view>
 </view>
-
