--- a/LOHAS/pages/user/user.wxss
+++ b/LOHAS/pages/user/user.wxss
@@ -1,160 +1,164 @@
 /* pages/first/first.wxss */
+.user_info_wrap{
+    height:45vh;
+    background-color:#9ccd7a;
+    overflow: hidden;
+    position: relative;
+}
 
+.user_img_wrap{
+    position: relative;
+}
 
-.container{
+.user_bg{
+    height:50vh;
+    width:100%;
+    filter:blur(5rpx)
+}
+
+.user_info{
+    position: absolute;
+    left:50%;
+    transform:translateX(-50%);
+    top:20%;
+    text-align:center;
+}
+
+.user_icon{
+    width:200rpx;
+    height:200rpx;
+    border-radius: 50%;
+}
+
+.user_name{
+    margin-top:40rpx;
+    font-size:40rpx;
+    color:white;
+}
+
+.PersonalitySignature {
+    font-size: 20rpx;
+    color: #665c5c;
+}
+
+.money {
+    color: red;
+    font-size: 30rpx;
+    margin-bottom: 55rpx;
+    margin-left: 5rpx;
+}
+
+.Order {
     display: flex;
-    display: -webkit-flex;
-    align-items: left;
-    margin: 2%;
-  
-  }
-  
-  .flex-container {
-      display: flex;
-      display: -webkit-flex;
-      align-items: center;
-      background-color: #9ccd7a;
-  }
-  
-  .UserHeadImage {
-      margin: 50rpx;
-      margin-left: 35rpx;
-  }
-  
-  .UserHeadImage image{
-      width: 130rpx;
-      height: 130rpx;
-      background-color: #000000;
-      border-radius: 65rpx;
-  }
-  
-  .user-name {
-      width: 350rpx;
-      height: 75rpx;
-  }
-  
-  .PersonalitySignature {
-      font-size: 20rpx;
-      color: #665c5c;
-  }
-  
-  .money {
-      color: red;
-      font-size: 30rpx;
-      margin-bottom: 55rpx;
-      margin-left: 5rpx;
-  }
-  
-  .Order {
-      display: flex;
-      margin-left: 35rpx;
-  }
-  
-  .MyOrder {
-      margin-right: 30rpx;
-  }
-  
-  .AllofOrder {
-      margin-left: 380rpx;
-      font-size: 30rpx;
-      color: gray;
-      padding-top: 7rpx;
-  }
-  
-  
-  
-  .State {
-      margin-top: 20rpx;
-      display: flex;
-      margin: 25rpx;
-  }
-  
-  .Sta {
-      margin: 37rpx;
-  }
-  
-  .Center {
-      text-align: center;
-      font-size: 20rpx;
-      color: gray;
-  }
-  
-  .Mine {
-      display: flex;
-      flex-direction: column;
-      /* margin-top: 50rpx; */
-      /* margin-left: 35rpx; */
-  }
-  
-  .Trans {
-      display: flex;
-      padding-top: 25px;
-      padding-bottom: 25px;
-      /* height: 60px; */
-      padding-left: 35px;
-      padding-right: 35px;
-  }
-  
-  .Instru {
-      margin-left: 400rpx;
-      margin-top: -7px;
-      width: 60rpx; 
-      height: 60rpx;
-  }
-  
-  .Sta image {
-      width: 100rpx;
-      height: 100rpx;
-      background-color: #000;
-      border-radius: 50rpx;
-  }
-  .Instr{
-      width: 50rpx;
-      height: 50rpx;
-  }
-  
-  
-  .middle {
-      margin-bottom: 40rpx;
-      box-shadow: 0rpx 0rpx 20rpx #e2e1e4;
-      background-color: white;
-      margin-top: 370rpx;
-      width: 100%;
-  }
-  
-  .line {
-      width: 710rpx;
-      height: 1px;
-      background-color: #e5e5e5;
-      margin-left: 40rpx;
-  }
-  
-  .left,
-  .right {
-      display: flex;
-      align-items: center;
-  }
-  
-  .right {
-      height: 116rpx;
-      margin-right: 14rpx;
-  }
-  
-  .txt {
-      font-family: 'PingFang';
-      font-size: 34rpx;
-      color: #222;
-      margin-left: 20rpx;
-  }
-  
-  .about {
-      width: 750rpx;
-      height: 116rpx;
-      display: flex;
-      justify-content: space-between;
-      padding-left: 40rpx;
-      align-items: center;
-      border-radius: 50%;
-      background-color: white;
-      box-sizing: border-box;
-  }
+    margin-left: 35rpx;
+}
+
+.MyOrder {
+    margin-right: 30rpx;
+}
+
+.AllofOrder {
+    margin-left: 380rpx;
+    font-size: 30rpx;
+    color: gray;
+    padding-top: 7rpx;
+}
+
+
+
+.State {
+    margin-top: 20rpx;
+    display: flex;
+    margin: 25rpx;
+}
+
+.Sta {
+    margin: 37rpx;
+}
+
+.Center {
+    text-align: center;
+    font-size: 20rpx;
+    color: gray;
+}
+
+.Mine {
+    display: flex;
+    flex-direction: column;
+    /* margin-top: 50rpx; */
+    /* margin-left: 35rpx; */
+}
+
+.Trans {
+    display: flex;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    /* height: 60px; */
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+.Instru {
+    margin-left: 400rpx;
+    margin-top: -7px;
+    width: 60rpx;
+    height: 60rpx;
+}
+
+.Sta image {
+    width: 100rpx;
+    height: 100rpx;
+    background-color: #000;
+    border-radius: 50rpx;
+}
+
+.Instr {
+    width: 50rpx;
+    height: 50rpx;
+}
+
+
+.middle {
+    margin-bottom: 40rpx;
+    box-shadow: 0rpx 0rpx 20rpx #e2e1e4;
+    background-color: white;
+    margin-top: 370rpx;
+    width: 100%;
+}
+
+.line {
+    width: 710rpx;
+    height: 1px;
+    background-color: #e5e5e5;
+    margin-left: 40rpx;
+}
+
+.left,
+.right {
+    display: flex;
+    align-items: center;
+}
+
+.right {
+    height: 116rpx;
+    margin-right: 14rpx;
+}
+
+.txt {
+    font-family: 'PingFang';
+    font-size: 34rpx;
+    color: #222;
+    margin-left: 20rpx;
+}
+
+.about {
+    width: 750rpx;
+    height: 116rpx;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 40rpx;
+    align-items: center;
+    border-radius: 50%;
+    background-color: white;
+    box-sizing: border-box;
+}
