--- a/LOHAS/pages/user/user.wxml
+++ b/LOHAS/pages/user/user.wxml
@@ -2,9 +2,17 @@
 <view style="width: 750rpx; height: 1279rpx; display: block; box-sizing: border-box">
     <view class="user_info_wrap">
         <view wx:if="{{isLogin}}" class="user_img_wrap">
-            <image class="user_bg" src="{{userinfo.head_picture}}" bindtap="backgroundClick"></image>
+            <image wx:if="{{userinfo.head_picture}}" class="user_bg" src="{{userinfo.head_picture}}" bindtap="backgroundClick"></image>
+            <van-image wx:else use-error-slot  bindtap="backgroundClick"
+            custom-class="user_bg"
+            >
+            <text  slot="error">加载失败</text>
+            </van-image>
             <view class="user_info">
-                <image class="user_icon" src="{{userinfo.avatar}}" bindtap="imageClick"></image>
+                <image wx:if="{{userinfo.avatar}}" class="user_icon" src="{{userinfo.avatar}}" bindtap="imageClick"></image>
+                <van-image wx:else use-error-slot custom-class="user_icon" bindtap="imageClick" >
+                <text  slot="error">加载失败</text>
+                </van-image>
                 <view class="user_name">{{userinfo.shop_name}}</view>
             </view>
         </view>
@@ -18,7 +26,7 @@
             <view>修改信息</view>
         </navigator>
         <navigator class="Trans" url="./order">
-            <view>我的</view>
+            <view>商户推广</view>
             <image class="Instru" src=""></image>
         </navigator>
         <navigator class="Trans" url="">
