--- a/LOHAS/pages/announcement/announcement.wxml
+++ b/LOHAS/pages/announcement/announcement.wxml
@@ -1,53 +1,38 @@
 <!--pages/announcement/announcement.wxml-->
 <view>
-  <view class="container"> 
+  <view class="container">
     <view class="card-body">
       <view class="page-section">
         <view class="page-section-title">
         </view>
         <view class="page-section-spacing">
-          <scroll-view scroll-y="true" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-            <view 
-            class="menu_item" 
-            wx:for="{{shop_announcements}}"
-            wx:for-index="index"
-            wx:for-item="item"
-            wx:key="announcement_id"
-            >
-             <navigator>
-              <van-swipe-cell
-              id="swipe-cell"
-              left-width="{{ 65 }}"
-              right-width="{{ 65 }}"
-              name="{{item.announcement_id}}"
-              async-close
-              bind:close="onClose"
-              >
-                <view
-                slot="left"
-                class="van-swipe-cell__left"
-                >
-                修改
-                </view>
-                <van-card
-                desc="{{item.content}}"
-                title="{{item.title}}"
-                class="announcement-card"
-                >
-                  <view slot="footer">
-                    <label>发布时间：{{item.publish_time}}</label>
-                  </view>
-                </van-card>
-                <view
-                slot="right"
-                class="van-swipe-cell__right"
-                >
-                删除
-                </view>
-                </van-swipe-cell>
-                <view class="apart"></view>
-             </navigator>
-            </view>
+          <scroll-view scroll-y="true" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll"
+            scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+            <block wx:if="{{shop_announcements.length!==0}}">
+              <view class="menu_item" wx:for="{{shop_announcements}}" wx:for-index="index" wx:for-item="item"
+                wx:key="announcement_id">
+                <navigator>
+                  <van-swipe-cell id="swipe-cell" left-width="{{ 65 }}" right-width="{{ 65 }}"
+                    name="{{item.announcement_id}}" async-close bind:close="onClose">
+                    <view slot="left" class="van-swipe-cell__left">
+                      修改
+                    </view>
+                    <van-card desc="{{item.content}}" title="{{item.title}}" class="announcement-card">
+                      <view slot="footer">
+                        <label>发布时间：{{item.publish_time}}</label>
+                      </view>
+                    </van-card>
+                    <view slot="right" class="van-swipe-cell__right">
+                      删除
+                    </view>
+                  </van-swipe-cell>
+                  <view class="apart"></view>
+                </navigator>
+              </view>
+            </block>
+            <block wx:else>
+              暂无公告
+            </block>
           </scroll-view>
         </view>
       </view>
@@ -57,5 +42,5 @@
 <view class='placeholder-view'></view>
 <van-dialog id="van-dialog" />
 <view class="bottom_btn">
-    <button class="submit_button" bindtap="jumpPage">发布公告</button>
+  <button class="submit_button" bindtap="jumpPage">发布公告</button>
 </view>
