--- a/LOHAS/pages/product/ddl_product/ddl_product.wxml
+++ b/LOHAS/pages/product/ddl_product/ddl_product.wxml
@@ -7,7 +7,8 @@
         </view>
         <view class="page-section-spacing">
           <scroll-view scroll-y="true" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-            <view 
+            <block wx:if="{{ddl_products.length!==0}}">
+              <view 
             class="menu_item" 
             wx:for="{{ddl_products}}"
             wx:for-index="index"
@@ -54,6 +55,10 @@
              </navigator>
              <view class="apart"></view>
             </view>
+            </block>
+            <block wx:else>
+              暂无临期商品，试着发布一个吧！
+            </block>
           </scroll-view>
         </view>
       </view>
