--- a/LOHAS/pages/product/ddl_product/update.wxml
+++ b/LOHAS/pages/product/ddl_product/update.wxml
@@ -11,9 +11,8 @@
   </van-cell-group>
   <van-cell-group>
   <van-field
-    value="{{ current_cost }}"
     label="当前价格"
-    type="number"
+    type='digit'
     placeholder="请输入当前商品价格"
     border="{{ false }}"
     bind:change="onChangeProductCurrentPrice"
@@ -22,8 +21,8 @@
   </van-cell-group>
   <van-cell-group>
   <van-field
-    value="{{ origin_cost }}"
     label="商品原价"
+    type="digit"
     placeholder="请输入原商品价格"
     border="{{ false }}"
     bind:change="onChangeProductOriginalPrice"
